<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Oauth.OTPFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:background="@drawable/red_border_box_normal"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/otp_back_icon" />

                <vn.kido.ship.IControl.ITextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/confirm_sms"
                    android:textColor="@color/main"
                    android:textSize="20sp"
                    app:fontName="BRYANTLG_BOLD" />

            </FrameLayout>

            <vn.kido.ship.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_code_order"
                android:textColor="@color/gray_900"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />

            <vn.kido.ship.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pleaseinputcode"
                android:textColor="@color/gray_900"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />

            <vn.kido.ship.IControl.IEdittext
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/code_confirm"
                android:inputType="number"
                android:maxLength="4"
                android:padding="8dp"
                android:textColor="@color/gray_600"
                android:textColorHint="@color/gray_600"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/gray_600"></View>

        </LinearLayout>

        <vn.kido.ship.IControl.ITextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_receive_code"
            android:textColor="@color/gray_600"
            android:textSize="14sp"
            app:fontName="BRYANTLG_BOLD" />

        <vn.kido.ship.IControl.IButton
            android:id="@+id/btn_resend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/red_border_box_null_background"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/send_again"
            android:textColor="@color/main"
            android:textSize="14sp"
            app:fontName="BRYANTLG_BOLD" />

    </LinearLayout>

    <include layout="@layout/progress" />
</FrameLayout>