<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment.Dialog.MessageDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp">

        <vn.kido.ship.IControl.ITextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:textAllCaps="true"
            android:textColor="@color/main"
            android:textSize="18sp"
            app:fontName="BRYANTLG_BOLD" />

        <vn.kido.ship.IControl.ITextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/message"
            android:textColor="@color/gray_700"
            android:textSize="14sp"
            app:fontName="BRYANTLG_BOLD" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">


        <vn.kido.ship.IControl.IButton
            android:id="@+id/submit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:background="@color/main"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:fontName="BRYANTLG_BOLD" />
    </LinearLayout>


</LinearLayout>