<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Fragment.Order.VerifyNoteOrderFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"></FrameLayout>

    <LinearLayout
        android:id="@+id/container_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/white_radius_box"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/otp_back_icon" />

                <vn.kido.ship.IControl.ITextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/confirm_order"
                    android:textAllCaps="true"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:fontName="BRYANTLG_BOLD" />

            </FrameLayout>

            <vn.kido.ship.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/input_text"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />


            <vn.kido.ship.IControl.IEdittext
                android:id="@+id/edt_note"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/border_edittext"
                android:gravity="center|top"
                android:hint="@string/addnote"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:scaleType="fitCenter"
                android:textColor="@color/gray_700"
                android:textSize="13sp"
                app:fontName="BRYANTLG_NORMAL" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/lnnote"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imv_note"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/finish"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imv_nonote"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/waiting" />

                <vn.kido.ship.IControl.ITextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:layout_margin="8dp"
                    android:text="@string/note_order"
                    android:textColor="@color/gray_700"
                    android:textSize="14sp"
                    app:fontName="BRYANTLG_BOLD" />
            </LinearLayout>

            <vn.kido.ship.IControl.IButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_program"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/finished"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />
        </LinearLayout>


    </LinearLayout>


    <include layout="@layout/progress" />

</FrameLayout>