<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Fragment.Order.ChangeQuantityFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"></FrameLayout>

    <LinearLayout
        android:id="@+id/container_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/red_border_box_normal"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/otp_back_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <vn.kido.ship.IControl.ITextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/quantityproduct"
                        android:textAllCaps="true"
                        android:textColor="@color/main"
                        android:textSize="16sp"
                        app:fontName="BRYANTLG_BOLD" />

                    <vn.kido.ship.IControl.ITextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product"
                        android:textAllCaps="true"
                        android:textColor="@color/main"
                        android:textSize="16sp"
                        app:fontName="BRYANTLG_BOLD" />
                </LinearLayout>


            </FrameLayout>

            <vn.kido.ship.IControl.ITextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@string/changequantity"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />


            <NumberPicker
                android:id="@+id/numberpicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_edittext"
                android:gravity="center|top"
                android:hint="@string/addnote"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:scaleType="fitCenter"
                android:textColor="@color/gray_700"
                android:textSize="13sp"
                android:theme="@style/NumberPicker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <vn.kido.ship.IControl.ITextView
                        android:id="@+id/unitproduct"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="0"
                        android:textColor="@color/main"
                        android:textSize="14sp"
                        app:fontName="BRYANTLG_BOLD" />

                    <vn.kido.ship.IControl.ITextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="/"
                        android:textColor="@color/gray_900"
                        android:textSize="14dp"
                        app:fontName="BRYANTLG_BOLD" />

                    <vn.kido.ship.IControl.ITextView
                        android:id="@+id/txvattribute"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/product"
                        android:textColor="@color/gray_900"
                        android:textSize="14sp"
                        app:fontName="BRYANTLG_BOLD" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:orientation="horizontal">

                    <vn.kido.ship.IControl.ITextView
                        android:id="@+id/unittotal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:maxLines="2"
                        android:text=""
                        android:textColor="@color/main"
                        android:textSize="16sp"
                        app:fontName="BRYANTLG_BOLD" />


                </LinearLayout>


            </LinearLayout>

            <vn.kido.ship.IControl.IButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_program"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontName="BRYANTLG_BOLD" />
        </LinearLayout>


    </LinearLayout>


    <include layout="@layout/progress" />

</FrameLayout>